css/dc.css
/* type declarations */

html {
  color: rgba(153,153,153,1);
  min-height: 101%;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  hyphens: auto;
}

body {
  font-family: "Helvetica Neue", Helvetica, Calibri, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, Arial, sans-serif;
  color: rgba(153,153,153,1);
}

/* end type declarations */

/* main layout */

#intro .pagedown {display: none; margin-top:40px;}
#intro.one.two.three .pagedown {display: block;}

header {
  margin-top:1em;
  margin-bottom:2em;
  }

header h1 {
  font-size: 2em;
  margin: 0;
  padding: 0;
}

header h1 span,
.jumbo span {
  color: rgba(88,139,161,1);
}

article.subsection {
  margin-bottom: 500px;
  padding-top: 90px;
}

#quote {
  cursor: pointer;
}

footer {
  border-top:1px solid;
  margin-bottom: 40px;
  padding-top: 15px;
}

/* nav styles */

.nav-pills {
  margin-top: 4px;
  margin-bottom: 0;
}

.nav-pills > li > a {
  color: rgba(88,139,161,1)
  margin-right: 4px;
}
.nav-pills > .active > a, 
.nav-pills > .active > a:hover, 
.nav-pills > .active > a:focus {
  background: rgba(88,139,161,1);
}

@media (min-width: 980px) {
  header {
    position: fixed;
    top:0;
    left:0;
    margin: 0;
    padding: 0;
    width: 100%;
    height: 80px;
    z-index: 99999;
  }

  header .container {
    background: white;
    padding: 20px 0;
  }

}

/* end nav styles */

/* ===================== */
/* SLIDESHOW AND RELATED */
/* ===================== */
.columnss { position: relative; }
#slideshow { position: relative; }

/* slideshow images (for most of the demos, these are the actual "slides") */
.cycle-slideshow img { 
  padding: 0; 
  display: block;
}

/* in case script does not load */
.cycle-slideshow img:first-child {
  position: static; z-index: 100;
}

/* pager */
.minipostit-pager,
.cycle-pager { 
  overflow: hidden;
  position: relative;
  text-align: center; 
  height:50px;
  z-index: 500; 
}
.cycle-pager span { 
  color: rgba(153,153,153,.5); 
  cursor: pointer; 
  display: inline-block; 
  height: 16px; 
  font-family: arial; 
  font-size: 50px; 
  width: 16px; 
}
.cycle-pager span.cycle-pager-active {
  color: rgba(88,139,161,1);
}
.cycle-pager > * { cursor: pointer;}

.minipostit-pager span {
  cursor: pointer; 
  display: inline-block; 
  height: 20px; 
  width: 20px; 
  overflow: hidden;
  text-indent: -9999999px;
  margin: 0 2px;
}

.minipostit-pager span.cycle-pager-active {
  background: #444;
}

/* #slideshow nav controls */
/* #slideshow nav controls */
/* #slideshow nav controls */
.slidenav { 
  display: block;
  position:relative; 
  z-index: 499 !important;
  }

.slidenav .row,
.slidenav .row .span2, 
.slidenav .row .span2 a { 
  display: block;
  height: 100%;
  }

.slidenav .row,
.slidenav .row .span3 { 
  height: 100%;
  }

.slidenav .row .span3 a { 
  opacity: 0;
  background: rgba(255,255,255,.75);
  font-size: 100px;
  line-height: 100px;
  text-align: center;
  text-decoration: none;
  color: rgba(88,139,161,1);
  /**/
  transition: opacity 1s;
  -webkit-transition: opacity 1s;
  -moz-transition: opacity 1s;
  -ms-transition: opacity 1s;
  -o-transition: opacity 1s;
  }
.slidenav .row .span3 a:hover { 
  opacity: 1;
  }
/* /end slideshow nav controls */
/* /end slideshow nav controls */
/* /end slideshow nav controls */

.postit {
  padding: 20px;
  margin: -10px -10px 10px -10px;
}

.yellowbg, .minipostit { background-color: rgba(239,239,191,1); }
.purplebg, .slide2     { background-color: rgba(228,204,230,1); }
.bluebg, .slide3       { background-color: rgba(179,217,254,1); }
.greenbg, .slide4      { background-color: rgba(166,218,144,1); }
.graybg                { background-color: rgba(224,224,224,1); }
.piyellow              { color: rgba(239,239,191,1); }
.pipurple              { color: rgba(228,204,230,1); }
.piblue                { color: rgba(179,217,254,1); }
.pigreen               { color: rgba(166,218,144,1); }
.pigray                { color: rgba(224,224,224,1); }

.bottomalign {
  vertical-align: bottom;
  display: table-cell;
  color: #444;
  font-weight: bold;
  }

p.indent { padding: 10px; }
p.intro  { padding: 10px 28px; }

.columnss .lead {
  height: 260px;
}
.toprow    { min-height: 30px; margin-bottom: 20px;}
/* .bottomrow { min-height: 120px; } */

.toprow.sizeadjust {
  margin-left: -100px;
  width: 1140px;
}

.toprow.graybg {
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 20px;
  width: 980px;
}

img.canvas { 
  height: 300px;
  width: auto;
}

img.unfold {
  margin: 0;
}

/* Einstein Quote */
#quote h2.bigquote {
  font-size: 400%;
  line-height: 1.1;
  text-indent: -25px;
  padding: 0 0 1em 0;
}

#quote .byline {
  text-transform: uppercase;
  font-size: 1.5em;
  font-weight: bold;
  text-indent: -25px;
  letter-spacing: 1px;
  color: rgba(88,139,161,1); 
}

/* stacked images fading to text... */
#revealing .reveal {
  position: relative;
  min-height: 300px;
}
#revealing .reveal .fadeorder {
  width: 300px;
  height:300px;
  position: absolute;
  top:0;
  left:0;
}

